src/objects/CRM_WF_Planeacion_Calendario_CRM__c.object
<CustomObject>
    <fields>
        <fullName>MX_WF_EECC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla la selecciona el usuario cuando en la campaña es elegido el canal de EECC</description>
        <label>EECC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_IVR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla la selecciona el usuario cuando en la campaña es elegido el canal de IVR</description>
        <label>IVR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Podio__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo de checkbox para marcar cuando el canal de comunicación &quot;Podio&quot; se incluya en la campaña.</description>
        <label>Podio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Push_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido el canal de Push Notification</description>
        <label>Push Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla se selecciona cuando en la campaña es elegido  el canal de SMS.</description>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Sdat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla la selecciona el usuario cuando en la campaña es elegido el canal de Sdat</description>
        <label>Sdat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_Consumer_Finance_Mult__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Consumer_Fin_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Consumer Finance Mult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_Consumer_Finance_SMS_Push__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Consumer_Fin_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Consumer Finance SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_DIY_Digital_Servicing_Mult__c</fullName>
        <formula>CRM_WF_Volumen__c + CRM_WF_Fecha_Carga__r.MX_WF_Volumen_Aprobado_DIY_Digital_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total DIY Digital Servicing Mult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_DIY_Digital_Servicing_SMS__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_Aprobado_DIY_Digital_S_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total DIY Digital Servicing SMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_Open_Mark_Hipotecario_Mult__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprob_Open_Mkt_Hip_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Open Mark Hipotecario Mult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_Open_Mark_Hipotecario_SMS__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprob_Open_Mkt_Hipot_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Open Mark Hipotecario SMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_Open_Market_Auto_Mult__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Open_Mk_Auto_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Open Market Auto Mult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_Open_Market_Auto_SMS__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Open_Mk_Auto_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Open Market Auto SMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_Open_Market_TDC_Mult__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Open_Mk_TDC_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Open Market TDC Mult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_VT_Open_Market_TDC_SMS__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Open_Mk_TDC_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Open Market TDC SMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Ventanilla__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación Workflow, la casilla la selecciona el usuario cuando en la campaña es elegido el canal de Ventanilla</description>
        <label>Ventanilla</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Volumen_Total_Hipotecario_Mult__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Hipotecario_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Hipotecario Mult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Volumen_Total_Hipotecario_SMS_Push__c</fullName>
        <formula>CRM_WF_Volumen__c +  CRM_WF_Fecha_Carga__r.MX_WF_Volumen_aprobado_Hipoteca_SMS_Push__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumen Total Hipotecario SMS Push</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Planeación Calendario CRM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_WF_Estatus__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CRM_WF_Nombre_Campana__c</columns>
        <columns>CRM_WF_Area_solicitante__c</columns>
        <columns>CRM_WF_Fecha_Carga__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>CRM_WF_Tipo_de_canal_y_campana</fullName>
        <columns>NAME</columns>
        <columns>CRM_WF_Nombre_Campana__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CRM_WF_Fecha_Carga__c</columns>
        <columns>CRM_WF_Dia__c</columns>
        <columns>CRM_WF_Estatus__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CRM_WF_Area_solicitante__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tipo de canal y campaña</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Folio planeación calendario CRM</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planeaciones Calendario CRM</pluralLabel>
    <recordTypes>
        <fullName>CRM_WF_Carga_CRM</fullName>
        <active>true</active>
        <label>Carga Multicanal</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_WF_Carga_SMS_Push</fullName>
        <active>true</active>
        <label>Carga SMS Push</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRM_WF_Carga_mayor_a_21_dias</fullName>
        <active>true</active>
        <description>Regla de validación para la aplicación Worfkflow, impide que los usuarios cargen una base con más de tres semanas de anticipación</description>
        <errorConditionFormula>GBL_WF_Dias_Restantes_Carga_Base__c &gt; 21</errorConditionFormula>
        <errorMessage>Solo se pueden planear las cargas con 3 semanas de anticipación</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Justificacion_Obligatoria</fullName>
        <active>true</active>
        <description>El usuario deberá escribir una justificación cuando quiera cancelar el registro</description>
        <errorConditionFormula>AND (   ISPICKVAL( CRM_WF_Cancelar_Carga__c  , &quot;Sí&quot;)  ,  CRM_WF_Justificaci_n_de_Cancelaci_n__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>CRM_WF_Justificaci_n_de_Cancelaci_n__c</errorDisplayField>
        <errorMessage>Debes escribir una justificación de la cancelación</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Multicanal_Obligatorio</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

RecordType.Name == &quot;Carga Multicanal&quot;,
MX_WF_Bcom__c == False,
MX_WF_EECC__c == False,
MX_WF_Ventanilla__c == False,
MX_WF_Podio__c == False,
MX_WF_ATM__c == False,
MX_WF_Bmovil__c == False,
MX_WF_IVR__c == False,
MX_WF_Sdat__c == False
)</errorConditionFormula>
        <errorMessage>Debes seleccionar por lo menos un Canal para la Carga Multicanal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_No_Hay_Canal_CRM</fullName>
        <active>true</active>
        <description>No se puede elegir el tipo de registro CRM si la campaña no tienen ningún canal de CRM</description>
        <errorConditionFormula>AND(
  
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;ATM&quot;) ) , 
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;Bcom&quot;) ), 
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;Bmovil&quot;) ), 
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;EECC&quot;) ), 
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;IVR&quot;) ), 
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;Sdat&quot;) ),
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Ventanilla&quot;) ) ,
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Podio&quot;) ),
     NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Bancomer movil&quot;) ),
     RecordType.Name == &quot;Carga Multicanal&quot;
    )</errorConditionFormula>
        <errorMessage>Este tipo de registro no es valido para los canales seleccionados en la campaña</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_No_Hay_Canal_SMS_Push</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;SMS&quot;) ),
    NOT( INCLUDES(CRM_WF_Nombre_Campana__r.CRM_WF_Canales_de_Comunicacion__c, &quot;Push Notification&quot;) ), 
    NOT( CRM_WF_Nombre_Campana__r.CRM_WF_Push_Notification__c ),  
    NOT( CRM_WF_Nombre_Campana__r.CRM_WF_SMS__c ) ,
    RecordType.Name == &quot;Carga SMS Push&quot; 
    )</errorConditionFormula>
        <errorMessage>Este tipo de registro no es valido para los canales seleccionados en la campaña</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Regla_Cancelacion</fullName>
        <active>true</active>
        <description>Para poder cancelar un registro debe de estar previamente aprobado</description>
        <errorConditionFormula>AND( ISPICKVAL (  CRM_WF_Cancelar_Carga__c , &quot;Sí&quot;),  
   OR( ISPICKVAL ( CRM_WF_Estatus__c , &quot;Documentación&quot;), 
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Lista de espera&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Rechazado&quot;)
      )  
    )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Cancelar_Carga__c</errorDisplayField>
        <errorMessage>Solo puedes cancelar registros ya aprobados</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_SMS_PUSH_Obligatorio</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

RecordType.Name == &quot;Carga SMS Push&quot;,

MX_WF_SMS__c == False,
MX_WF_Push_Notification__c == False
)</errorConditionFormula>
        <errorMessage>Debes seleccionar por lo menos un Canal para la Carga SMS/Push</errorMessage>
    </validationRules>
</CustomObject>